<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_rounded_light"
        android:divider="@drawable/divider_1dp_dark"
        android:elevation="2dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <EditText
            android:id="@+id/username"
            style="@style/EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_email"
            android:inputType="text"
            android:nextFocusLeft="@id/username"
            android:nextFocusUp="@id/username"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <EditText
            android:id="@+id/password"
            style="@style/EditText.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/login"/>

</merge>