<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_light"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/scan_frame"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/text_black_secondary"
                    android:text="@string/or"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_height="wrap_content"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/uidInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <EditText
                        android:id="@+id/uidEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_id"
                        android:inputType="text"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/deviceInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <EditText
                        android:id="@+id/deviceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/device_id"
                        android:inputType="text"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/checkButton"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/submit"/>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>