<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/facebook_login_button"
            style="@style/SocialButton.Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/twitter_login_button"
            style="@style/SocialButton.Twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/google_login_button"
            style="@style/SocialButton.Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_18_google_logo_color"
            android:drawableStart="@drawable/ic_18_google_logo_color"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_rounded_light"
            android:divider="@drawable/divider_1dp_dark"
            android:elevation="2dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <EditText
                android:id="@+id/username"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_email"
                android:inputType="text"
                android:nextFocusLeft="@id/username"
                android:nextFocusUp="@id/username"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>

            <EditText
                android:id="@+id/password"
                style="@style/EditText.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/login"/>
    </LinearLayout>
</ScrollView>