<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:background="@color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/headerBackground"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/redeem_header_background"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/userPhoto"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_margin="4dp"
                        android:elevation="1dp"
                        app:riv_oval="true"/>

                    <TextView
                        android:id="@+id/userName"
                        android:textColor="@color/text_white_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"/>

                    <TextView
                        android:id="@+id/userUsername"
                        android:textColor="@color/text_white_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"/>
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/redeem_options"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/voucher"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_black_primary"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/voucherSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/lucky_dip"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_black_primary"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/luckyDipSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/submit"/>
        </LinearLayout>

    </FrameLayout>
</ScrollView>